kubernetes/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__
  namespace: __CI_ENVIRONMENT_SLUG__
spec:
  type: ClusterIP
  selector:
    app: __APP_NAME__
    tier: api
  ports:
    - name: http
      port: __APP_PORT__
      protocol: TCP
